# api-testing

./: .env  .gitignore  README.md  TESTING_ARCHITECTURE.md  config.py  conftest.py  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
10/: index.html
10/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: duration-trend.json  history.json  retry-trend.json
10/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
11/: index.html
11/export/: influxDbData.txt
12/: index.html
12/data/: behaviors.csv  behaviors.json  packages.json  (+3 more)
13/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
clients/: api_client.py  authenticated_api_client.py  errors_schema.py  event_hooks.py  exceptions.py  logger.py  logging_decorator.py  private_http_builder.py  public_http_builder.py
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
export/: influxDbData.txt  prometheusData.txt
fixtures/: allure.py  authentication.py  courses.py  exercises.py  files.py  users.py
history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
last-history/: history.json  retry-trend.json
tests/: conftest.py
tools/: fakers.py  logger.py  routes.py
widgets/: categories-trend.json  duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
(+1065 files in other folders)
