[project]
name = "api-testing-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest==2.15.0",
    "allure-python-commons==2.15.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "assertpy==1.1",
    "attrs==25.3.0",
    "certifi==2025.7.14",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "faker==37.4.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-check==2.5.3",
    "pytest-rerunfailures==15.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "referencing==0.36.2",
    "rpds-py==0.26.0",
    "sniffio==1.3.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
]
